--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/netinfo": "^9.4.1",
     "@react-native-firebase/app": "^18.4.0",
     "@react-native-firebase/auth": "^18.4.0",
@@ -19,6 +20,7 @@
     "moment-timezone": "^0.5.43",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdownalert": "^5.1.0",
     "react-native-internet-connection-alert": "^0.1.9",
     "react-native-safe-area-context": "^4.7.2",
